# xoros-rescue-shell

./: Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs  theme.rs
src/models/: mod.rs
src/sys/: mod.rs
src/sys/actions/: beep.rs  flash.rs  mod.rs
src/sys/common/: mod.rs
src/sys/info/: mod.rs
src/ui/: mod.rs  status_bar.rs
src/ui/menus/: configs.rs  help.rs  mod.rs  quit.rs  recovery.rs  tests.rs
