[package]
name = "xoros-rescue-shell"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/xoros-repo/xoros-rescue-shell"
repository = "https://github.com/xoros-repo/xoros-rescue-shell.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"]}
cursive_buffered_backend = "0.6.1"
sysinfo = "*"

